{
  "version": 4,
  "terraform_version": "1.1.5",
  "serial": 68,
  "lineage": "0bbf9bea-3bed-f34b-4fcf-cd7dc71aed74",
  "resources": [
    {
      "module": "module.cluster",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster_master_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:513119805936:security-group/sg-0a596cad372096584",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a596cad372096584",
            "ingress": [],
            "name": "k8s-demo-master-sg",
            "name_prefix": "",
            "owner_id": "513119805936",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "k8s-demo-master-sg"
            },
            "tags_all": {
              "Name": "k8s-demo-master-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-075484a5f732cddfd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_ingress_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 443,
            "id": "sgrule-3417491238",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0a596cad372096584",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.cluster.aws_security_group.cluster_master_sg",
            "module.network.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "vpc_iep",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c5ee58ce1c8b9366",
            "domain": "vpc",
            "id": "eipalloc-0c5ee58ce1c8b9366",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-18-206-138-108.compute-1.amazonaws.com",
            "public_ip": "18.206.138.108",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "k8s-demo-eip"
            },
            "tags_all": {
              "Name": "k8s-demo-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:513119805936:internet-gateway/igw-0ed93999ec3acb818",
            "id": "igw-0ed93999ec3acb818",
            "owner_id": "513119805936",
            "tags": {
              "Name": "k8s-demo-internet-gateway"
            },
            "tags_all": {
              "Name": "k8s-demo-internet-gateway"
            },
            "vpc_id": "vpc-075484a5f732cddfd"
          },
          "dependencies": [
            "module.network.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c5ee58ce1c8b9366",
            "connectivity_type": "public",
            "id": "nat-0dc35f68b5c6df076",
            "network_interface_id": "eni-091516d3c278eebb9",
            "private_ip": "10.101.93.96",
            "public_ip": "18.206.138.108",
            "subnet_id": "subnet-09ae3108018aa7327",
            "tags": {
              "Name": "k8s-demo-nat-gateway"
            },
            "tags_all": {
              "Name": "k8s-demo-nat-gateway"
            }
          },
          "dependencies": [
            "module.network.aws_eip.vpc_iep",
            "module.network.aws_subnet.public_subnet_1a",
            "module.network.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route",
      "name": "nat_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-04a4f07c56df2ba0e1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0dc35f68b5c6df076",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-04a4f07c56df2ba0e",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.vpc_iep",
            "module.network.aws_nat_gateway.nat",
            "module.network.aws_route_table.nat",
            "module.network.aws_subnet.public_subnet_1a",
            "module.network.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0ed93999ec3acb818",
            "id": "r-rtb-0a14e77414f8c653d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a14e77414f8c653d",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_internet_gateway.gw",
            "module.network.aws_route_table.igw_route_table",
            "module.network.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "igw_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:513119805936:route-table/rtb-0a14e77414f8c653d",
            "id": "rtb-0a14e77414f8c653d",
            "owner_id": "513119805936",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "k8s-demo-public-route"
            },
            "tags_all": {
              "Name": "k8s-demo-public-route"
            },
            "timeouts": null,
            "vpc_id": "vpc-075484a5f732cddfd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:513119805936:route-table/rtb-04a4f07c56df2ba0e",
            "id": "rtb-04a4f07c56df2ba0e",
            "owner_id": "513119805936",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "k8s-demo-private-route"
            },
            "tags_all": {
              "Name": "k8s-demo-private-route"
            },
            "timeouts": null,
            "vpc_id": "vpc-075484a5f732cddfd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02def14571954dd5d",
            "route_table_id": "rtb-04a4f07c56df2ba0e",
            "subnet_id": "subnet-0dcf93dafa1ed90e3"
          },
          "dependencies": [
            "module.network.aws_route_table.nat",
            "module.network.aws_subnet.private_subnet_1a",
            "module.network.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0344b9a0724d91350",
            "route_table_id": "rtb-04a4f07c56df2ba0e",
            "subnet_id": "subnet-03ec30444344b6248"
          },
          "dependencies": [
            "module.network.aws_route_table.nat",
            "module.network.aws_subnet.private_subnet_1c",
            "module.network.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0953cb1aced8eb51f",
            "route_table_id": "rtb-0a14e77414f8c653d",
            "subnet_id": "subnet-09ae3108018aa7327"
          },
          "dependencies": [
            "module.network.aws_route_table.igw_route_table",
            "module.network.aws_subnet.public_subnet_1a",
            "module.network.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09de43e3ae02be3d2",
            "route_table_id": "rtb-0a14e77414f8c653d",
            "subnet_id": "subnet-0be4dfe9eaf773143"
          },
          "dependencies": [
            "module.network.aws_route_table.igw_route_table",
            "module.network.aws_subnet.public_subnet_1c",
            "module.network.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:513119805936:subnet/subnet-0dcf93dafa1ed90e3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.101.88.0/23",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dcf93dafa1ed90e3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "513119805936",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "k8s-demo-private-1a"
            },
            "tags_all": {
              "Name": "k8s-demo-private-1a"
            },
            "vpc_id": "vpc-075484a5f732cddfd"
          },
          "dependencies": [
            "module.network.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:513119805936:subnet/subnet-03ec30444344b6248",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.101.90.0/23",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03ec30444344b6248",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "513119805936",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "k8s-demo-private-1c"
            },
            "tags_all": {
              "Name": "k8s-demo-private-1c"
            },
            "vpc_id": "vpc-075484a5f732cddfd"
          },
          "dependencies": [
            "module.network.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:513119805936:subnet/subnet-09ae3108018aa7327",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.101.92.0/23",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09ae3108018aa7327",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "513119805936",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "k8s-demo-public-1a"
            },
            "tags_all": {
              "Name": "k8s-demo-public-1a"
            },
            "vpc_id": "vpc-075484a5f732cddfd"
          },
          "dependencies": [
            "module.network.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:513119805936:subnet/subnet-0be4dfe9eaf773143",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.101.94.0/23",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0be4dfe9eaf773143",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "513119805936",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "k8s-demo-public-1c"
            },
            "tags_all": {
              "Name": "k8s-demo-public-1c"
            },
            "vpc_id": "vpc-075484a5f732cddfd"
          },
          "dependencies": [
            "module.network.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "cluster_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:513119805936:vpc/vpc-075484a5f732cddfd",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.101.88.0/21",
            "default_network_acl_id": "acl-0e166778a419f1a03",
            "default_route_table_id": "rtb-007f5a35f9d0e4f25",
            "default_security_group_id": "sg-0765ae670edf26279",
            "dhcp_options_id": "dopt-0345bd5ae21ab5d47",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-075484a5f732cddfd",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-007f5a35f9d0e4f25",
            "owner_id": "513119805936",
            "tags": {
              "Name": "k8s-demo-vpc"
            },
            "tags_all": {
              "Name": "k8s-demo-vpc"
            }
          }
        }
      ]
    }
  ]
}